# paq8test

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  block_comp.sh  block_comp.txt  decomress.txt  info.txt  output.txt  paq8_block.cpp  paq8_for_block  paq_block  version.md  version.txt
benchmarks/calgarycorpus/: book1.fse  book1.lpaq  paper1.fse  paper1.lpaq
output/: BOOK1  BOOK2  book1  book1.p8t  book2  dickens  enwik8  nci  osdb  reymont  webster
result/: paper1.paq8test
src/: AdaptiveMap.cpp  AdaptiveMap.hpp  ArithmeticEncoder.cpp  ArithmeticEncoder.hpp  Bucket.hpp  CMakeLists.txt  ContextMap.hpp  ContextMap2.hpp  ContextModel.hpp  DivisionTable.hpp  Encoder.cpp  Encoder.hpp  Hash.hpp  IPredictor.hpp  IndirectContext.hpp  IndirectModel.cpp  IndirectModel.hpp  MatchModel.hpp  Mixer.cpp  Mixer.hpp  Models.cpp  Models.hpp  NormalModel.cpp  NormalModel.hpp  Predictor.cpp  Predictor.hpp  RingBuffer.hpp  Shared.cpp  Shared.hpp  SimdMixer.hpp  SmallStationaryContextMap.hpp  StateMap.cpp  StateMap.hpp  StateTable.hpp  StationaryMap.cpp  StationaryMap.hpp  Statistic.cpp  Stretch.hpp  UpdateBroadcaster.cpp  UpdateBroadcaster.hpp  (+1 more)
src/include/: Encoder.hpp  Mixer.hpp  Models.hpp  Predictor.hpp  Shared.hpp  SimdMixer.hpp  SimpleMixer.hpp  Statistic.hpp
src/include/map/: AdaptiveMap.hpp  ContextMap2.hpp  StateMap.hpp  StateTable.hpp  StationaryMap.hpp
src/include/model/: ContextModel.hpp  IndirectContext.hpp  IndirectModel.hpp  MatchModel.hpp  NormalModel.hpp  SparseModel.hpp
src/include/util/: Array.hpp  BH.hpp  BitCount.hpp  Bucket.hpp  Hash.hpp  Ilog.hpp  ProgramChecker.hpp  Random.hpp  redisHandler.hpp  utils.hpp
src/map/: AdaptiveMap.cpp  AdaptiveMap.hpp  ContextMap.cpp  ContextMap.hpp  ContextMap2.cpp  ContextMap2.hpp  SmallStationaryContextMap.cpp  SmallStationaryContextMap.hpp  StateMap.cpp  StateMap.hpp  StateTable.cpp  StationaryMap.cpp  StationaryMap.hpp
src/model/: ContextModel.cpp  ContextModel.hpp  IndirectContext.hpp  IndirectModel.cpp  MatchModel.cpp  MatchModel.hpp  NormalModel.cpp  NormalModel.hpp  SparseModel.cpp  SparseModel.hpp
src/util/: Array.hpp  Bucket.hpp  Hash.hpp  Ilog.cpp  ProgramChecker.cpp  Random.cpp  Squash.hpp  redisHandler.cpp
test/: CMakeLists.txt  blockReset.txt  info.txt  merge  merge.cpp  merge_noname  noBlkReset.txt  paq8test  paq8test_noBlockReset_new  paq8test_no_blockReset  paq8test_retrain  paq8test_retrain_complete  paq8test_retrain_oldversion  test.sh  tmptest.txt
test/statistic/: bit1.txt  bit2.txt  bit3.txt  bit4.txt  bit5.txt  bit6.txt  bit7.txt  bit8.txt
test/util/: RedisHanler_test.cpp
